...

  Widget _buildHeader() => Container(
    padding: const EdgeInsets.all(16),
    child: Column(
      children: const [
        Text(
          'SOS Emergency',
          style: TextStyle(
            fontSize: 28,
            fontWeight: FontWeight.bold,
            color: Colors.white,
          ),
        ),
...
                ListTile(
                  leading: CircleAvatar(
                    backgroundColor: Colors.purple.withOpacity(0.2),
                    child: const Icon(Icons.sos, color: Colors.purple),
                  ),
                  title: const Text(
                    'Family',
                    style: TextStyle(
                      color: Color(0xFF1F3354),
                      fontWeight: FontWeight.bold,
                    ),
                  ),
                  subtitle: const Text(
...
