...
            key: const Key('dashboard_button'),
          ),
          Icon(
            Icons.warning_amber_rounded,
            size: 30,
            color: Color(0xFFF2F2F2),
            key: const Key('sos_button'),
          ),
          Icon(
            Icons.settings,
            size: 30,
            color: Color(0xFFF2F2F2),
            key: const Key('settings_button'),
...
